공공api 적용(미세먼지 농도) - 진행중(Retrofit 구현 완료, 접근키 발급 단계)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dustkeeper">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -8,7 +9,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        >
+<!--useCleartextTraffic: android 9버전(lv 28)부터 강화된 네트워크 보안정책으로 인해, http인 주소를 사용할 수 없음. 그래서 발생하는 CLEARTEXT 오류 해결을 위함-->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
